css/main.css
/* ... */
    textarea:focus ~ .contact-label label{
        bottom: 0;
    }

    hr {
    margin-top: 0px !important;
    margin-bottom: 2px !important;
    color: #000 !important;
    border: 0 !important;
    border-top: 1px solid #000 !important;
    }

    .red-hr {
    margin-top: 0px !important;
    margin-bottom: 2px !important;
    color: #000 !important;
    border: 0 !important;
    border-top: 1px solid #FF2241 !important;
    }
    .nav>li>a {
      padding-left: 0 !important;
      padding-right: 0 !important;
    }

    .food-black-mobile li:hover{
        cursor: pointer;
    }

    /*speaker page*/
    .container-speakers{
        width: 83.7vw;
        margin: 0 auto;
    }
    .speaker{
        display: inline-block;
        width: 24.3vw;
        margin: 3vw 1.8vw;
        text-align: left;
        vertical-align: top;
        cursor: pointer;
    }
    .speaker-name {
        font-family: "Elliot";
        font-size: 1.73vw;
        margin: 2.4vw 0 .8vw 0;
    }
    .speaker-image{
        width: 100%;
        height: 31.6vw;
        margin: 0 !important;
        position: relative;
    }
    .speaker-image::after{
        content: ' ';
        color: #FFF;
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background-color: #FF2241;
        text-align: center;
        opacity: 0;
        padding-top: 60%;
        transition: .15s ease-in-out;
    }
    .speaker-fields {
        margin: 0 !important;
        font-family: "Elliot-Light";
        font-size: 1.1vw;
    }
    .speaker-expand{
        display: none !important;
    }
    .speaker:hover .speaker-image::after{
        content: 'hover';
        opacity: 0.9;
    }
    #blurryPic{
        width: 100%;
        height: 19.8vw;
        position: absolute;
        top: 0;
        background-image: url('https://taw.imgix.net/speakers_splashblur.jpg?w=2000&h=1');
        background-position-y: -1.8vw;
        background-position-x: -2vw;
        background-attachment: fixed;
        background-size: 105%;
        overflow: hidden;
        z-index: -1;
    }
    #whiteEdge{
        width: 100%;
        height: 1.3vw;
        position: absolute;
        left: 0;
        bottom: 0;
        background-image : linear-gradient(to bottom,
            rgba(255,255,255, 0), rgba(255,255,255, 1) 90%);
    }
    /*modal css*/
    #changeBG::after{
        opacity: none !important;
    }
     .speaker-modal{
        width: 76vw;
        max-width: 1500px;
        height: 41vw;
        max-height: 700px;
        position: fixed;
        top: 8vh;
        left: 12vw;
        background-color: #FFF;
        font-family: 'Elliot-Light';
        z-index: 2000;
        box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.1);
        transition: 0.3s ease-in-out;
    }
    .speaker-modal 
        font-size: 1vw;
        line-height: 1.6vw;
    }
    .speaker-modal a{
        font-family: 'Elliot-Bold';
        font-size: 1vw;
        letter-spacing: 0.08vw;
        color: #333;
        text-transform: uppercase;
    }
    .modal-hidden{
        top: -160vh;
    }
    .modal-x {
        position: absolute;
        left: 74.5vw;
        top: 1vw;
        width: 1.2vw;
        height: 1.2vw;
        z-index: 2000;
    }
    .close-modal{
        z-index: 1999;
        width: 100%;
        height: 100%;
        position: fixed;
        top: 0;
    }
    .speaker-modal-content{
        position: relative;
        top: 0;
        width: 100%;
        height: 100%;
    }
    .speaker-modal-info{
        float: left;
        width: 50%;
        height: 100%;
        padding: 2vw 3.5vw;
        overflow-y: scroll;
    }
    .blur{
        filter: blur(10px);
        transition: 0.1s ease-in;
    }
    .speaker-modal-image{
        float: left;
        width: 50%;
    }
    .speaker-modal-name{
        font-family: 'Elliot';
        font-size: 1.8vw;
    }
    .speaker-modal-position{
        margin-bottom: 3vw;
    }
    .speaker-modal-description{
        margin-bottom: 2.5vw;
    }
    .speaker-modal-label{
        font-family: 'Elliot';
        font-size: 1.2vw;
    }
    .speaker-modal-presentation{

    }
    .speaker-modal-dateTime{
        margin-bottom: 2.5vw;
    }
    .speaker-modal-website{
        top: 2vw;
    }
    .speaker-modal-socialMedia{
        top: 2vw;
    }
/* ... */

